Refactor Modal Structure: Restructure HTML for modal layout, introducing a new `.rightSide` class for better organization, and enhance CSS styles for improved flexbox alignment and visual hierarchy.

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,28 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.header {
+  font-weight: bold;
+}
+
+.modal {
+  padding: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.icon {
+  flex-shrink: 0;
+}
+.rightSide {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.prompt {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
