--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -24,3 +24,55 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+
+
+ul {
+  margin: 0px;
+  padding: 0px;
+  list-style-type: none;
+
+}
+
+.full-body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer {
+  background-color: hsl(0, 0%, 94%);
+}
+
+.content {
+  display: flex;
+  flex: 1 0 auto;
+  flex-direction: column;
+  align-items: center;
+  justify-content:center;
+  gap: 12px;
+}
+
+.left-links, .right-links {
+  display: flex;
+  margin: 16px;
+  gap: 16px;
+
+}
+
+
+a {
+  text-decoration: none;
+  color: hsla(20, 2%, 27%, 0.527);
+  font-weight:900;
+  font-size:.9rem;
+}
+
+button {
+  padding: 8px;
+}
