--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -51,7 +51,7 @@ ul {
 
 .content {
   display: flex;
-  flex: 1 0 auto;
+  flex: 1;
   flex-direction: column;
   align-items: center;
   justify-content:center;
