--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,6 +2,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  background-color: black;
 }
 
 .header {
@@ -17,7 +18,7 @@ body {
 }
 
 .sidebar {
-  width: 300px;
+  width: 250px;
   background: royalblue;
   box-sizing: border-box;
 }
@@ -26,4 +27,94 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+/* My work */
+
+body {
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  min-height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.header {
+  /* height: 72px;
+  background: darkmagenta;
+  color: white; */
+  display: flex;
+  align-items: center;
+
+  max-height: 72px;
+}
+
+.title {
+  padding: 16px;
+  font-size: 32px;
+  font-weight: 900;
+}
+
+.content {
+  display: flex;
+  flex-grow: 1;
+  width: 100vw;
+  background-color: #ffffff;
+}
+
+.sidebar {
+  /* width: 300px;
+  background: royalblue;
+  box-sizing: border-box; */
+  min-width: 300px;
+  padding: 16px;
+  font-size: 24px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 48px;
+  gap:48px;
+}
+
+.footer {
+  /* height: 72px;
+  background: #eee;
+  color: darkmagenta; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom-left-radius: 25px;
+
+}
+
+
+
+.card {
+  /* border: 1px solid #eee;
+  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  border-radius: 4px; */
+  max-width: 300px;
+  padding: 10px;
+  font-weight: 450;
+}
+
+
+
+ul {
+  padding: 0px;
+  list-style-type: none;
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  font-weight:500 ;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+
 }
